--- a/react-online-judge/src/App.css
+++ b/react-online-judge/src/App.css
@@ -4,6 +4,9 @@
 	min-height: 100vh;
 }
 
+.header {
+	padding-bottom: 50px;
+}
 .content {
 	display: flex;
 	flex-direction: column;
@@ -55,6 +58,21 @@
 	border-radius: 5%;
 	margin-bottom: "10px";
 }
-.header {
-	padding-bottom: 50px;
+
+.loginForm {
+	display: flex;
+	flex-direction: column;
+	border-radius: 5%;
+	border: 1px solid #ccc;
+	padding: 50px;
+	width: 400px;
+}
+.loginForm > * {
+	margin: 2px;
+}
+
+.credit{
+	margin-top: 64px;
+	font-size: 12px;
+	color: #555;
 }
