--- a/react-online-judge/src/App.css
+++ b/react-online-judge/src/App.css
@@ -22,10 +22,10 @@
 	width: 65%;
 }
 
-.examples {
+.content-item-div{
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: space-between;
 }
 
 .example {
@@ -75,4 +75,9 @@
 	margin-top: 64px;
 	font-size: 12px;
 	color: #555;
+}
+
+.problemHeader{
+	font-weight: bold;
+	padding-bottom: 10px;
 }
