--- a/react-online-judge/src/App.css
+++ b/react-online-judge/src/App.css
@@ -29,6 +29,14 @@
 	border: 1px solid #ccc;
 	border-radius: 1em;
 	margin: 10px 0 10px 0;
+	padding: 10px;
+}
+.content-item-div-div{
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	margin: 10px 0 10px 0;
 }
 
 .example {
@@ -58,6 +66,17 @@
 	border: "2px solid #111";
 	border-radius: 5%;
 	margin-bottom: "10px";
+}
+.exp-bar{
+	width: 100%;
+	height: 20px;
+	background-color: #ccc;
+	border-radius: 5px;
+}
+.exp-bar-inner{
+	height: 100%;
+	background-color: #4CAF50;
+	border-radius: 5px;
 }
 
 .loginForm {
