Feat: Input&output Limit text

--- a/react-online-judge/src/App.css
+++ b/react-online-judge/src/App.css
@@ -33,10 +33,21 @@
 }
 
 .example {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	width: 40%;
 	padding: 1em;
 	margin: 1em;
 	border-radius: 1em;
+}
+
+.example .Limit {
+	text-align: left;
+	height: 128px;
+	border-top: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
+	padding: 1em;
 }
 
 .example .IO {
