--- a/react-online-judge/src/App.css
+++ b/react-online-judge/src/App.css
@@ -31,7 +31,12 @@
 	margin: 10px 0 10px 0;
 	padding: 10px;
 }
-
+.content-solved{
+	border : 1px solid #ccc;
+	border-radius: 1em;
+	margin: 10px 0 10px 0;
+	padding : 10px;
+}
 .example {
 	display: flex;
 	flex-direction: column;
